update deploy process

--- a/src/main/resources/application-run.properties
+++ b/src/main/resources/application-run.properties
@@ -5,12 +5,11 @@
 #1 db: *.url
 #+1 db: *.jdbcUrl
 #spring.datasource.url=jdbc:postgresql://localhost:5432/batch_db
-spring.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/batch_db
-spring.datasource.username=dummy_user
-spring.datasource.password=dummy_pass
+spring.datasource.jdbcUrl=jdbc:postgresql://${BATCH_META_DB_HOST}:${BATCH_META_DB_PORT}/${BATCH_META_DB_NAME}
+spring.datasource.username=${BATCH_META_DB_USER}
+spring.datasource.password=${BATCH_META_DB_PASS}
 spring.batch.jdbc.initialize-schema=always
 
-app.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/batch_app_db
-app.datasource.username=dummy_user
-app.datasource.password=dummy_pass
-app.batch.jdbc.initialize-schema=always
+app.datasource.jdbcUrl=jdbc:postgresql://${BATCH_SRC_DB_HOST}:${BATCH_SRC_DB_PORT}/${BATCH_SRC_DB_NAME}
+app.datasource.username=${BATCH_SRC_DB_USER}
+app.datasource.password=${BATCH_SRC_DB_PASS}
